--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^8.34.0",
     "next": "14.2.15",
     "posthog-js": "^1.174.2",
     "react": "^18",
