--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,15 @@
+#####################
+# Database
+DATABASE_URL=
+# Stg
+# DATABASE_URL=
+
+#####################
+# PostHog
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
+
+#####################
+# Sentry
+NEXT_PUBLIC_SENTRY_DSN=
+SENTRY_AUTH_TOKEN=
