--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,11 @@ DATABASE_URL=
 # DATABASE_URL=
 
 #####################
+# Meta Details
+NEXT_PUBLIC_ENVIRONMENT=
+NEXT_PUBLIC_APP_DOMAIN=
+
+#####################
 # PostHog
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
