--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^8.34.0",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "next": "14.2.15",
     "posthog-js": "^1.174.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "superjson": "^2.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.1",
