--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-#####################
+'#####################
 # Database
 DATABASE_URL=
 # Stg
@@ -18,3 +18,5 @@ NEXT_PUBLIC_POSTHOG_HOST=
 # Sentry
 NEXT_PUBLIC_SENTRY_DSN=
 SENTRY_AUTH_TOKEN=
+NEXT_PUBLIC_SENTRY_ORG=
+NEXT_PUBLIC_PROJECT_ID=
